--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,10 @@ export(MakeLbin)
 export(MakeTsteps)
 export(Mapfunc)
 export(cntTsteps)
+export(fit_growth)
 export(growmod)
+export(growth_objective)
+export(make_growth_obj)
 export(plotfit)
 importFrom(RTMB,MakeADFun)
 importFrom(RTMB,REPORT)
