Fix RTMB namespace issues and improve documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,8 @@ export(MakeLbin)
 export(MakeTsteps)
 export(Mapfunc)
 export(cntTsteps)
-export(fit_growth)
 export(growmod)
-export(growth_objective)
-export(make_growth_obj)
+export(make_growmod_obj)
 export(plotfit)
 importFrom(RTMB,MakeADFun)
 importFrom(RTMB,REPORT)
@@ -31,9 +29,7 @@ importFrom(graphics,plot)
 importFrom(graphics,polygon)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
-importFrom(stats,dnorm)
 importFrom(stats,na.omit)
-importFrom(stats,pnorm)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
 importFrom(stats,weighted.mean)
