Added new function to convert vb to a stm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(cntTsteps)
 export(growmod)
 export(make_growmod_obj)
 export(plotfit)
+export(vb2STM)
 importFrom(RTMB,MakeADFun)
 importFrom(RTMB,REPORT)
 importFrom(RTMB,getAll)
